--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -1,5 +1,17 @@
+@import './style/font.css';
 header{
-    width: 100px;
-    height: 100px;
-    background-color: blue;
+    color: #68ACD3;
+
+    h1{
+        font-weight: 700;
+        font-size: 3rem;
+        text-transform: uppercase;
+    }
+
+    h2{
+        font-size: 1.5rem;
+        text-transform: uppercase;
+        font-weight: 400;
+        text-align: center;
+    }
 }
