--- a/src/style/aside.scss
+++ b/src/style/aside.scss
@@ -1,3 +1,69 @@
 aside{
     width: 33%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+
+    img,
+    .wrapper-aside{
+        width: 60%;
+    }
+
+    .wrapper-aside{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        section{
+            width: 100%;
+            h2,
+            a,
+            li{
+                color: #FAFAFA;
+            }
+
+
+
+            h2{
+                border-bottom: 2px #FAFAFA solid;
+                margin: 0;
+                font-size: 1.5rem;
+                font-weight: 400;
+                text-transform: uppercase;
+                padding-bottom: 10px;
+            }
+            
+            ul{
+                padding: 0;
+                li{
+                    list-style-type: none;
+                    margin: 2px;
+                    a{
+                        text-decoration: none;
+                        img{
+                            width: 21px;
+                            position: relative;
+                            top: 5px;
+                        }
+                    }
+                }
+            }
+
+            .tools-ul{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                flex-wrap: wrap;
+                width: 100%;
+
+                li{
+                    list-style-type: none;
+                    &::before{
+                        content: '#';
+                    }
+                }
+            }
+        }
+    }
 }
