--- a/src/style/aside.scss
+++ b/src/style/aside.scss
@@ -2,12 +2,16 @@ aside{
     width: 33%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
+    padding-top: 100px; 
 
     img,
     .wrapper-aside{
         width: 60%;
+    }
+
+    img{
+        margin-bottom: 100px;
     }
 
     .wrapper-aside{
@@ -17,6 +21,7 @@ aside{
         align-items: center;
         section{
             width: 100%;
+            margin-bottom: 100px;
             h2,
             a,
             li{
@@ -45,6 +50,7 @@ aside{
                             width: 21px;
                             position: relative;
                             top: 5px;
+                            margin: 0;
                         }
                     }
                 }
@@ -62,6 +68,13 @@ aside{
                     &::before{
                         content: '#';
                     }
+                }
+            }
+        }
+        .portfolio{
+            ul{
+                li{
+                    margin-bottom: 7px;
                 }
             }
         }
