--- a/src/style/aside.scss
+++ b/src/style/aside.scss
@@ -58,13 +58,13 @@ aside{
 
             .tools-ul{
                 display: flex;
-                justify-content: space-between;
                 align-items: center;
                 flex-wrap: wrap;
                 width: 100%;
 
                 li{
                     list-style-type: none;
+                    margin-right: 10px;
                     &::before{
                         content: '#';
                     }
