--- a/src/style/aside.scss
+++ b/src/style/aside.scss
@@ -52,6 +52,10 @@ aside{
                             top: 5px;
                             margin: 0;
                         }
+
+                        &:hover{
+                            font-weight: 700;
+                        }
                     }
                 }
             }
