--- a/src/style/footer.scss
+++ b/src/style/footer.scss
@@ -62,6 +62,10 @@ footer{
         width: 100%;
         img{
             width: 40px;
+            transition: transform 1s;
+            &:hover{
+                transform: rotate(360deg);
+            }
         }
         .wrapper-rsschool{
             width: 100px;
